Complete friendship feature
