# server/src/shared/index.js
@@ -1,0 +1,9 @@
+const FRIEND_PUBLIC_FIELDS = ['_id', 'email', 'username', 'birthday'];
+const USER_PUBLIC_FIELDS = ['_id', 'email', 'username', 'birthday', 'createdAt'];
+const UNFAMILIAR_USER_PUBLIC_FIELDS = ['_id', 'username'];
+
+module.exports = {
+  FRIEND_PUBLIC_FIELDS,
+  USER_PUBLIC_FIELDS,
+  UNFAMILIAR_USER_PUBLIC_FIELDS,
+};
